Bugfix: updated the execute command to support SSH chaining
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/GCMDeployment@5734 28e8926c-6b08-0410-baaa-805c5e19b8d6